# movies_marker

./: .env-example  .gitignore  Makefile  README.md  alembic_as.ini  alembic_s.ini  docker-compose.yml  openapi.yaml  pyproject.toml  requirements.txt
.github/workflows/: actions.yml
alembic/: env.py
alembic/versions/: initial.py
async_migrations/: env.py
async_migrations/versions/: 8f3e94961bb0_asyncinitial.py
service/: Dockerfile  __main__.py  requirements.txt
service/config/: __init__.py  default.py  utils.py
service/db/: __init__.py  crud.py
service/db/connection/: __init__.py  session.py
service/db/models/: __init__.py  app_models.py
service/endpoints/: __init__.py  add_movie_handler.py  marks_handler.py  utils.py
service/schemas/: __init__.py  marks.py  test_schema.py
service/utils/: helpers.py  logic.py
service/utils/health_check/: __init__.py
tests/: conftest.py  test_db.py  test_endpoints.py  test_logic.py  utils.py
