[tool.poetry]
name = "movies_marker"
version = "0.1.0"
description = ""
authors = ["Alina Gorbatova <alina-junior-msk@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
asyncio = "^3.4.3"
aiohttp = "^3.8.1"
SQLAlchemy = "^1.4.41"
alembic = "^1.8.1"
pydantic = "^1.10.2"
asyncpg = "^0.26.0"
uvicorn = "^0.18.3"
psycopg2 = "^2.9.3"

[tool.poetry.group.dev.dependencies]
requests = "^2.28.1"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
black = "^22.8.0"
isort = "^5.10.1"
pylint = "^2.15.2"
mock = "^4.0.3"
psycopg2-binary = "^2.9.3"
Faker = "^14.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "my: for debugging purposes",
]